--- a/album-of-weaving-patterns.html
+++ b/album-of-weaving-patterns.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Translation and encoding</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="favicon" href="./favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Workbench:SCAN@1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./main.css">
     <style>
         .book-page {
             border: 1px solid gray;
@@ -30,14 +30,14 @@
 
 <body>
     <header>
-        <a href="/">
+        <a href="./">
             <h1>ETC</h1>
         </a>
     </header>
     <main>
         <h2>Translation and Encoding</h2>
         <div style="overflow: hidden;">
-            <img style="margin-bottom: -0.25rem; " src="digital-weaving/animation.gif" alt="animation of how to read weaving draft" />
+            <img style="margin-bottom: -0.25rem; " src="./digital-weaving/animation.gif" alt="animation of how to read weaving draft" />
         </div>
         <div class="description">
             <p>
@@ -48,12 +48,12 @@
                 This project begain in 2013 with an email from my mom, after a PDF copy of the manual was sent to her.
             </p>
         </div>
-        <img src="digital-weaving/email.png" alt="screenshot of email" />
+        <img src="./digital-weaving/email.png" alt="screenshot of email" />
         <div class="two-column" style="gap: 0">
-            <img src="digital-weaving/book-cover.png" alt="book cover in Russian" />
+            <img src="./digital-weaving/book-cover.png" alt="book cover in Russian" />
             <div class="book-page">
-                <img src="digital-weaving/book.png" alt="page of book in Russian about weaving" />
-                <img src="digital-weaving/book-2.png" alt="page of book in Russian about weaving" />
+                <img src="./digital-weaving/book.png" alt="page of book in Russian about weaving" />
+                <img src="./digital-weaving/book-2.png" alt="page of book in Russian about weaving" />
             </div>
         </div>
         <div class="description">
@@ -63,9 +63,10 @@
             </p>
         </div>
         <div class="two-column">
-            <img src="digital-weaving/encoding.png" alt="JSON with array of binary" />
-            <img src="digital-weaving/dictionary.png" alt="Russian to English translations of weaving terms" />
+            <img src="./digital-weaving/encoding.png" alt="JSON with array of binary" />
+            <img src="./digital-weaving/dictionary.png" alt="Russian to English translations of weaving terms" />
         </div>
+        <img src="./digital-weaving/2.png" alt="screenshot of pattern #33" />
         <div class="description">
             <p>
                 I also created an <a href="https://shelby.cool/v1/patterns/builder.html" target="_blank">editable
@@ -73,13 +74,13 @@
             </p>
         </div>
         <div style="overflow: hidden;">
-            <img style="margin-top: -2rem;" src="digital-weaving/1.gif" alt="demonstration of weaving web app" />
+            <img style="margin-top: -2rem;" src="./digital-weaving/1.gif" alt="demonstration of weaving web app" />
         </div>
     </main>
     <footer>
         <p>
-            <a href="/three-bit-adder.html">&larr; 3-bit adder</a>
-            <a href="/misc.html">Miscellaneous &rarr;</a>
+            <a href="./three-bit-adder.html">&larr; 3-bit adder</a>
+            <a href="./misc.html">Miscellaneous &rarr;</a>
         </p>
     </footer>
 </body>
