--- a/beaded-textiles.html
+++ b/beaded-textiles.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beaded textiles</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="favicon" href="./favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Workbench:SCAN@1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./main.css">
     <style>
         .grid {
             max-width: 53rem;
@@ -24,13 +24,13 @@
 
 <body>
     <header>
-        <a href="/">
+        <a href="./">
             <h1>ETC</h1>
         </a>
     </header>
     <main>
         <h2>Beaded Textiles</h2>
-        <img src="sun-bag/IMG_3642.jpg" alt="small beaded purse with an image of a sun" />
+        <img src="./sun-bag/IMG_3642.jpg" alt="small beaded purse with an image of a sun" />
         <div class="description">
             <p>
                 One of my first introductions to weaving was a small bead loom.
@@ -40,7 +40,7 @@
                 draw patterns in my graph paper notebook that I could translate into a beaded array.
             </p>
         </div>
-        <img src="sun-bag/1.png" alt="screenshot of google sheets in sun pattern"/>
+        <img src="./sun-bag/1.png" alt="screenshot of google sheets in sun pattern"/>
         <div class="description">
             <p>
                 Recreation of graph paper using <a
@@ -48,15 +48,15 @@
                     target="_blank">google sheets</a>, 2024
             </p>
         </div>
-        <!-- <img src="sun-bag/IMG_3643.jpg" alt="small beaded purse with an image of a sun" /> -->
-        <img src="sun-bag/IMG_3644.jpg" alt="small beaded purse with an image of a sun" />
+        <!-- <img src="./sun-bag/IMG_3643.jpg" alt="small beaded purse with an image of a sun" /> -->
+        <img src="./sun-bag/IMG_3644.jpg" alt="small beaded purse with an image of a sun" />
         <div class="description">
             <p>
                 The relationship between pixels and beads/fabric/weaving continues to fascinate me and I've picked up a bead loom again recently.
             </p>
 
         </div>
-        <img src="sun-bag/IMG_1599.jpeg" alt="top down view of a bead loom" />
+        <img src="./sun-bag/IMG_1599.jpeg" alt="top down view of a bead loom" />
         <div class="description">
             <p>
                 I've also been cataloging decorative tile around my neighborhood in Seattle for a future project, maybe. These patterns change every few blocks, and I haven't found an explanation as to
@@ -64,25 +64,25 @@
             </p>
         </div>
         <div class="grid">
-            <img src="tiles/IMG_1964.jpg" />
-            <img style="max-width: 60%;" src="tiles/1.png" />
-            <img src="tiles/IMG_1592.jpg" />
-            <img src="tiles/IMG_1595.jpg" />
-            <img src="tiles/IMG_5399.jpg" />
-            <img style="max-width: 60%;" src="tiles/2.png" />
-            <img style="max-width: 60%;" src="tiles/3.png" />
-            <img src="tiles/IMG_1591.jpg" />
-            <img src="tiles/IMG_1589.jpg" />
-            <!-- <img src="tiles/IMG_1590.jpg" /> -->
-            <img src="tiles/IMG_1593.jpg" />
-            <img src="tiles/IMG_1594.jpg" />
-            <img src="tiles/IMG_1587.jpg" />
+            <img src="./tiles/IMG_1964.jpg" />
+            <img style="max-width: 60%;" src="./tiles/1.png" />
+            <img src="./tiles/IMG_1592.jpg" />
+            <img src="./tiles/IMG_1595.jpg" />
+            <img src="./tiles/IMG_5399.jpg" />
+            <img style="max-width: 60%;" src="./tiles/2.png" />
+            <img style="max-width: 60%;" src="./tiles/3.png" />
+            <img src="./tiles/IMG_1591.jpg" />
+            <img src="./tiles/IMG_1589.jpg" />
+            <!-- <img src="./tiles/IMG_1590.jpg" /> -->
+            <img src="./tiles/IMG_1593.jpg" />
+            <img src="./tiles/IMG_1594.jpg" />
+            <img src="./tiles/IMG_1587.jpg" />
         </div>
     </main>
     <footer>
         <p>
-            <a href="/shadow-weaving.html">&larr; Shadow weaving</a>
-            <a href="/three-bit-adder.html">3-bit adder &rarr;</a>
+            <a href="./shadow-weaving.html">&larr; Shadow weaving</a>
+            <a href="./three-bit-adder.html">3-bit adder &rarr;</a>
         </p>
     </footer>
 </body>
