--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ETC – Shelby Wilson</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="favicon" href="./favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Workbench:SCAN@1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./main.css">
     <style>
         main {
             min-height: 76vh;
@@ -104,43 +104,43 @@
 
 <body>
     <header>
-        <a href="/">
+        <a href="./">
             <h1>ETC</h1>
         </a>
     </header>
     <main>
         <ul>
             <li>
-                <a href="/shadow-weaving.html">
+                <a href="./shadow-weaving.html">
                     Shadow weaving
 
-                    <img src="previews/shadow-weaving.png" alt="shadow weaving" />
+                    <img src="./previews/shadow-weaving.png" alt="shadow weaving" />
                 </a>
             </li>
             <li>
-                <a href="/beaded-textiles.html">
+                <a href="./beaded-textiles.html">
                     Beaded textiles
-                    <img src="previews/beads.png" alt="bead loom" />
+                    <img src="./previews/beads.png" alt="bead loom" />
                 </a>
             </li>
             <li>
-                <a href="/album-of-weaving-patterns.html">
+                <a href="./album-of-weaving-patterns.html">
                     Translation and encoding
 
-                    <img src="previews/weaving.png" alt="digital weaving" />
+                    <img src="./previews/weaving.png" alt="digital weaving" />
                 </a>
             </li>
             <li>
-                <a href="/three-bit-adder.html">
+                <a href="./three-bit-adder.html">
                     3-bit adder
-                    <img src="previews/wires.png" alt="3-bit adder" />
+                    <img src="./previews/wires.png" alt="3-bit adder" />
                 </a>
             </li>
             <li>
-                <a href="/misc.html">
+                <a href="./misc.html">
                     Miscellaneous
 
-                    <img src="previews/misc.png" alt="weaving" />
+                    <img src="./previews/misc.png" alt="weaving" />
                 </a>
             </li>
         </ul>
