--- a/misc.html
+++ b/misc.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miscellaneous</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="favicon" href="./favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Workbench:SCAN@1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./main.css">
     <style>
         .embroidery {
             position: relative;
@@ -58,28 +58,28 @@
 
 <body>
     <header>
-        <a href="/">
+        <a href="./">
             <h1>ETC</h1>
         </a>
     </header>
     <main>
         <h2>Miscellaneous</h2>
-        <img src="misc/IMG_1779.jpg" alt="view of loom with fabric on it" />
+        <img src="./misc/IMG_1779.jpg" alt="view of loom with fabric on it" />
         <div class="description">
             <p>
                 Weaving sampler
             </p>
         </div>
         <div class="two-column">
-            <img src="misc/IMG_2795.jpg" alt="darning loom" />
-            <img src="misc/IMG_2816.jpg" alt="sock with mended patch" />
+            <img src="./misc/IMG_2795.jpg" alt="darning loom" />
+            <img src="./misc/IMG_2816.jpg" alt="sock with mended patch" />
         </div>
         <div class="description">
             <p>
                 Mending
             </p>
         </div>
-        <video src="misc/1-mute.mp4" loop muted controls autoplay></video>
+        <video src="./misc/1-mute.mp4" loop muted controls autoplay></video>
 
         <div class="description">
             <p>
@@ -87,16 +87,16 @@
             </p>
         </div>
         <div class="two-column">
-            <img src="misc/IMG_3612.jpg" alt="strips of striped paper in triaxial weave" />
-            <img src="misc/IMG_3651.jpg" alt="strips of blue, green, and orange paper in triaxial weave" />
+            <img src="./misc/IMG_3612.jpg" alt="strips of striped paper in triaxial weave" />
+            <img src="./misc/IMG_3651.jpg" alt="strips of blue, green, and orange paper in triaxial weave" />
         </div>
         <div class="description">
             <p>
                 Triaxial weaving
             </p>
         </div>
-        <img src="natural-dye/IMG_1283.jpg" alt="three fabric swatches dyed various shades of yellow" />
-        <img style="margin-top: 3rem;" src="natural-dye/IMG_1269.jpg" alt="pot for dyeing with fabric and liquid" />
+        <img src="./natural-dye/IMG_1283.jpg" alt="three fabric swatches dyed various shades of yellow" />
+        <img style="margin-top: 3rem;" src="./natural-dye/IMG_1269.jpg" alt="pot for dyeing with fabric and liquid" />
         <div class="description">
             <p>
                 Natural dye using pomegranates and iron oxide
@@ -110,8 +110,8 @@
                 input, created with OpenFrameworks
             </p>
         </div>
-        <video src="embroidery/timelapse-compressed.mp4" loop muted controls autoplay></video>
-        <img style="margin-top: 3rem;" src="embroidery/IMG_6876.png" alt="embroidered shirt pocket with plant design" />
+        <video src="./embroidery/timelapse-compressed.mp4" loop muted controls autoplay></video>
+        <img style="margin-top: 3rem;" src="./embroidery/IMG_6876.png" alt="embroidered shirt pocket with plant design" />
         <div class="description">
             <p>
                 A gift for my partner, an embroidered version of <a href="https://spacefiller.space/livingwall/"
@@ -119,20 +119,20 @@
             </p>
         </div>
         <!-- <div class="embroidery">
-            <img src="embroidery/IMG_6801.png" alt="" />
-            <img src="embroidery/IMG_6860.png" alt="" />
-            <img src="embroidery/IMG_6861.png" alt="" />
-            <img src="embroidery/IMG_6862.png" alt="" />
-            <img src="embroidery/IMG_6863.png" alt="" />
-            <img src="embroidery/IMG_6865.png" alt="" />
-            <img src="embroidery/IMG_6866.png" alt="" />
-            <img src="embroidery/IMG_6887.png" alt="" />
+            <img src="./embroidery/IMG_6801.png" alt="" />
+            <img src="./embroidery/IMG_6860.png" alt="" />
+            <img src="./embroidery/IMG_6861.png" alt="" />
+            <img src="./embroidery/IMG_6862.png" alt="" />
+            <img src="./embroidery/IMG_6863.png" alt="" />
+            <img src="./embroidery/IMG_6865.png" alt="" />
+            <img src="./embroidery/IMG_6866.png" alt="" />
+            <img src="./embroidery/IMG_6887.png" alt="" />
         </div> -->
     </main>
     <footer>
         <p>
-            <a href="/album-of-weaving-patterns.html">&larr; Translation <br class="mobile-only" /> and encoding</a>
-            <a href="/shadow-weaving.html">Shadow weaving &rarr;</a>
+            <a href="./album-of-weaving-patterns.html">&larr; Translation <br class="mobile-only" /> and encoding</a>
+            <a href="./shadow-weaving.html">Shadow weaving &rarr;</a>
         </p>
     </footer>
 </body>
