--- a/three-bit-adder.html
+++ b/three-bit-adder.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3-bit adder</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="favicon" href="./favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Workbench:SCAN@1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./main.css">
     <style>
         /* .diagram-container {
             position: relative;
@@ -112,13 +112,13 @@
 
 <body>
     <header>
-        <a href="/">
+        <a href="./">
             <h1>ETC</h1>
         </a>
     </header>
     <main>
         <h2>3-bit Adder</h2>
-        <img src="three-bit-adder/IMG_4545.jpg" alt="full adder" />
+        <img src="./three-bit-adder/IMG_4545.jpg" alt="full adder" />
         <div class="description">
             <p>
                 This 3-bit adder is an experiment in visible circuits and visible wiring, woven into a suspended window
@@ -130,11 +130,11 @@
         </div>
         <div class="two-column">
 
-            <img src="three-bit-adder/IMG_4526.jpg" alt="full adder" />
-            <img src="three-bit-adder/diagram.png"
+            <img src="./three-bit-adder/IMG_4526.jpg" alt="full adder" />
+            <img src="./three-bit-adder/diagram.png"
                 alt="full adder with description of encoding (3 + 3 = 6) layered on top" />
             <!-- <div class="diagram-container">
-                <img src="three-bit-adder/IMG_4526.jpg" alt="full adder" />
+                <img src="./three-bit-adder/IMG_4526.jpg" alt="full adder" />
                 <div class="diagram-overlay mono">
                     <h6>
                         1
@@ -210,24 +210,24 @@
                     class="mono">110<sub>2</sub></span> (binary).
             </p>
         </div>
-        <img src="three-bit-adder/IMG_4514.jpg" alt="full adder" />
-        <video src="three-bit-adder/1-mute.mp4" autoplay controls muted loop class="rotate-1"></video>
-        <img src="three-bit-adder/IMG_5026.jpg" alt="full adder" />
+        <img src="./three-bit-adder/IMG_4514.jpg" alt="full adder" />
+        <video src="./three-bit-adder/1-mute.mp4" autoplay controls muted loop class="rotate-1"></video>
+        <img src="./three-bit-adder/IMG_5026.jpg" alt="full adder" />
 
         <div class="two-column">
-            <img src="three-bit-adder/IMG_4468.jpg" alt="full adder" />
-            <img src="three-bit-adder/IMG_4469.jpg" alt="full adder" />
+            <img src="./three-bit-adder/IMG_4468.jpg" alt="full adder" />
+            <img src="./three-bit-adder/IMG_4469.jpg" alt="full adder" />
         </div>
 
-        <video src="three-bit-adder/2-mute.mp4" autoplay controls muted loop></video>
+        <video src="./three-bit-adder/2-mute.mp4" autoplay controls muted loop></video>
         <div class="description">
             <p>
                 Created at <a href="https://sfpc.study/" target="_blank">SFPC</a> in <a
                     href="https://cwandt.com/pages/about" target="_blank">CW&T's</a> hardware class, Fall 2019
             </p>
         </div>
-        <img src="wires/IMG_4055.jpg" alt="hello world" />
-        <video src="wires/3-mute.mp4" autoplay controls muted loop></video>
+        <img src="./wires/IMG_4055.jpg" alt="hello world" />
+        <video src="./wires/3-mute.mp4" autoplay controls muted loop></video>
 
         <div class="description">
             <p>
@@ -238,8 +238,8 @@
     </main>
     <footer>
         <p>
-            <a href="/beaded-textiles.html">&larr; Beaded textiles</a>
-            <a href="/album-of-weaving-patterns.html">Translation <br class="mobile-only" /> and encoding &rarr;</a>
+            <a href="./beaded-textiles.html">&larr; Beaded textiles</a>
+            <a href="./album-of-weaving-patterns.html">Translation <br class="mobile-only" /> and encoding &rarr;</a>
         </p>
     </footer>
 </body>
