--- a/shadow-weaving.html
+++ b/shadow-weaving.html
@@ -6,31 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shadow weaving</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="favicon" href="./favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Workbench:SCAN@1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./main.css">
     <style>
     </style>
 </head>
 
 <body>
     <header>
-        <a href="/">
+        <a href="./">
             <h1>ETC</h1>
         </a>
     </header>
     <main>
         <h2>Shadow Weaving</h2>
-        <img src="shadow-weaving/2.png" alt="pixelated dark green and white pattern" />
+        <img src="./shadow-weaving/2.png" alt="pixelated dark green and white pattern" />
         <div class="description">
             <p>
                 <a href="https://shelby.cool/shadow-weaving/" target="_blank">Shadow weaving</a> is a web tool made to experiment with
                 color and weave structure.
             </p>
         </div>
-        <video src="shadow-weaving/101.mp4" loop muted controls autoplay></video>
+        <video src="./shadow-weaving/101.mp4" loop muted controls autoplay></video>
 
         <div class="description">
             <p>
@@ -39,14 +39,14 @@
                 depending on this structure.
             </p>
         </div>
-        <video style="width: 10rem" src="shadow-weaving/100.mp4" loop muted controls autoplay></video>
+        <video style="width: 10rem" src="./shadow-weaving/100.mp4" loop muted controls autoplay></video>
         <div class="description">
             <p>
                 I am interested in the way the structure of a weave can determine color, and how that can be manipulated
                 into maze-like patterns.
             </p>
         </div>
-        <img src="shadow-weaving/IMG_4426.jpg" alt="paper weaving" />
+        <img src="./shadow-weaving/IMG_4426.jpg" alt="paper weaving" />
         <div class="description">
             <p>
                 I am exploring this technique using paper strips as well, deviating from a plain weave in order to
@@ -61,12 +61,12 @@
             </p>
         </div>
 
-        <img src="shadow-weaving/1.png" alt="pixelated green and white pattern" />
+        <img src="./shadow-weaving/1.png" alt="pixelated green and white pattern" />
     </main>
     <footer>
         <p>
-            <a href="/misc.html">&larr; Miscellaneous</a>
-            <a href="/beaded-textiles.html">Beaded textiles&rarr; </a>
+            <a href="./misc.html">&larr; Miscellaneous</a>
+            <a href="./beaded-textiles.html">Beaded textiles&rarr; </a>
         </p>
     </footer>
 </body>
