add lazy loading

--- a/album-of-weaving-patterns.html
+++ b/album-of-weaving-patterns.html
@@ -48,12 +48,12 @@
                 This project begain in 2013 with an email from my mom, after a PDF copy of the manual was sent to her.
             </p>
         </div>
-        <img src="./digital-weaving/email.png" alt="screenshot of email" />
+        <img loading="lazy" src="./digital-weaving/email.png" alt="screenshot of email" />
         <div class="two-column" style="gap: 0">
-            <img src="./digital-weaving/book-cover.png" alt="book cover in Russian" />
+            <img loading="lazy" src="./digital-weaving/book-cover.png" alt="book cover in Russian" />
             <div class="book-page">
-                <img src="./digital-weaving/book.png" alt="page of book in Russian about weaving" />
-                <img src="./digital-weaving/book-2.png" alt="page of book in Russian about weaving" />
+                <img loading="lazy" src="./digital-weaving/book.png" alt="page of book in Russian about weaving" />
+                <img loading="lazy" src="./digital-weaving/book-2.png" alt="page of book in Russian about weaving" />
             </div>
         </div>
         <div class="description">
@@ -63,10 +63,10 @@
             </p>
         </div>
         <div class="two-column">
-            <img src="./digital-weaving/encoding.png" alt="JSON with array of binary" />
-            <img src="./digital-weaving/dictionary.png" alt="Russian to English translations of weaving terms" />
+            <img loading="lazy" src="./digital-weaving/encoding.png" alt="JSON with array of binary" />
+            <img loading="lazy" src="./digital-weaving/dictionary.png" alt="Russian to English translations of weaving terms" />
         </div>
-        <img src="./digital-weaving/2.png" alt="screenshot of pattern #33" />
+        <img loading="lazy" src="./digital-weaving/2.png" alt="screenshot of pattern #33" />
         <div class="description">
             <p>
                 I also created an <a href="https://shelby.cool/v1/patterns/builder.html" target="_blank">editable
@@ -74,7 +74,7 @@
             </p>
         </div>
         <div style="overflow: hidden;">
-            <img style="margin-top: -2rem;" src="./digital-weaving/1.gif" alt="demonstration of weaving web app" />
+            <img loading="lazy"style="margin-top: -2rem;" src="./digital-weaving/1.gif" alt="demonstration of weaving web app" />
         </div>
     </main>
     <footer>
