--- a/misc.html
+++ b/misc.html
@@ -71,8 +71,8 @@
             </p>
         </div>
         <div class="two-column">
-            <img src="./misc/IMG_2795.jpg" alt="darning loom" />
-            <img src="./misc/IMG_2816.jpg" alt="sock with mended patch" />
+            <img loading="lazy" src="./misc/IMG_2795.jpg" alt="darning loom" />
+            <img loading="lazy" src="./misc/IMG_2816.jpg" alt="sock with mended patch" />
         </div>
         <div class="description">
             <p>
@@ -87,23 +87,23 @@
             </p>
         </div>
         <div class="two-column">
-            <img src="./misc/IMG_3612.jpg" alt="strips of striped paper in triaxial weave" />
-            <img src="./misc/IMG_3651.jpg" alt="strips of blue, green, and orange paper in triaxial weave" />
+            <img loading="lazy" src="./misc/IMG_3612.jpg" alt="strips of striped paper in triaxial weave" />
+            <img loading="lazy" src="./misc/IMG_3651.jpg" alt="strips of blue, green, and orange paper in triaxial weave" />
         </div>
         <div class="description">
             <p>
                 Triaxial weaving
             </p>
         </div>
-        <img src="./natural-dye/IMG_1283.jpg" alt="three fabric swatches dyed various shades of yellow" />
-        <img style="margin-top: 3rem;" src="./natural-dye/IMG_1269.jpg" alt="pot for dyeing with fabric and liquid" />
+        <img loading="lazy" src="./natural-dye/IMG_1283.jpg" alt="three fabric swatches dyed various shades of yellow" />
+        <img loading="lazy"style="margin-top: 3rem;" src="./natural-dye/IMG_1269.jpg" alt="pot for dyeing with fabric and liquid" />
         <div class="description">
             <p>
                 Natural dye using pomegranates and iron oxide
             </p>
         </div>
-        <img src="https://raw.githubusercontent.com/shelbywilson/sfpc-rtp/master/muriel/images/1.png" />
-        <img style="margin-top: 3rem;" src="https://raw.githubusercontent.com/shelbywilson/sfpc-rtp/master/muriel/images/muriel.gif" />
+        <img loading="lazy" src="https://raw.githubusercontent.com/shelbywilson/sfpc-rtp/master/muriel/images/1.png" />
+        <img loading="lazy"style="margin-top: 3rem;" src="https://raw.githubusercontent.com/shelbywilson/sfpc-rtp/master/muriel/images/muriel.gif" />
         <div class="description">
             <p>
                 A kind of <a href="https://shelby.cool/#/muriel" target="_blank"> digital tapestry</a> using text as
@@ -111,7 +111,7 @@
             </p>
         </div>
         <video src="./embroidery/timelapse-compressed.mp4" loop muted controls autoplay></video>
-        <img style="margin-top: 3rem;" src="./embroidery/IMG_6876.png" alt="embroidered shirt pocket with plant design" />
+        <img loading="lazy"style="margin-top: 3rem;" src="./embroidery/IMG_6876.png" alt="embroidered shirt pocket with plant design" />
         <div class="description">
             <p>
                 A gift for my partner, an embroidered version of <a href="https://spacefiller.space/livingwall/"
@@ -119,14 +119,14 @@
             </p>
         </div>
         <!-- <div class="embroidery">
-            <img src="./embroidery/IMG_6801.png" alt="" />
-            <img src="./embroidery/IMG_6860.png" alt="" />
-            <img src="./embroidery/IMG_6861.png" alt="" />
-            <img src="./embroidery/IMG_6862.png" alt="" />
-            <img src="./embroidery/IMG_6863.png" alt="" />
-            <img src="./embroidery/IMG_6865.png" alt="" />
-            <img src="./embroidery/IMG_6866.png" alt="" />
-            <img src="./embroidery/IMG_6887.png" alt="" />
+            <img loading="lazy" src="./embroidery/IMG_6801.png" alt="" />
+            <img loading="lazy" src="./embroidery/IMG_6860.png" alt="" />
+            <img loading="lazy" src="./embroidery/IMG_6861.png" alt="" />
+            <img loading="lazy" src="./embroidery/IMG_6862.png" alt="" />
+            <img loading="lazy" src="./embroidery/IMG_6863.png" alt="" />
+            <img loading="lazy" src="./embroidery/IMG_6865.png" alt="" />
+            <img loading="lazy" src="./embroidery/IMG_6866.png" alt="" />
+            <img loading="lazy" src="./embroidery/IMG_6887.png" alt="" />
         </div> -->
     </main>
     <footer>
