--- a/shadow-weaving.html
+++ b/shadow-weaving.html
@@ -46,7 +46,7 @@
                 into maze-like patterns.
             </p>
         </div>
-        <img src="./shadow-weaving/IMG_4426.jpg" alt="paper weaving" />
+        <img loading="lazy" src="./shadow-weaving/IMG_4426.jpg" alt="paper weaving" />
         <div class="description">
             <p>
                 I am exploring this technique using paper strips as well, deviating from a plain weave in order to
@@ -61,7 +61,7 @@
             </p>
         </div>
 
-        <img src="./shadow-weaving/1.png" alt="pixelated green and white pattern" />
+        <img loading="lazy" src="./shadow-weaving/1.png" alt="pixelated green and white pattern" />
     </main>
     <footer>
         <p>
