--- a/three-bit-adder.html
+++ b/three-bit-adder.html
@@ -130,11 +130,11 @@
         </div>
         <div class="two-column">
 
-            <img src="./three-bit-adder/IMG_4526.jpg" alt="full adder" />
-            <img src="./three-bit-adder/diagram.png"
+            <img loading="lazy" src="./three-bit-adder/IMG_4526.jpg" alt="full adder" />
+            <img loading="lazy" src="./three-bit-adder/diagram.png"
                 alt="full adder with description of encoding (3 + 3 = 6) layered on top" />
             <!-- <div class="diagram-container">
-                <img src="./three-bit-adder/IMG_4526.jpg" alt="full adder" />
+                <img loading="lazy" src="./three-bit-adder/IMG_4526.jpg" alt="full adder" />
                 <div class="diagram-overlay mono">
                     <h6>
                         1
@@ -210,13 +210,13 @@
                     class="mono">110<sub>2</sub></span> (binary).
             </p>
         </div>
-        <img src="./three-bit-adder/IMG_4514.jpg" alt="full adder" />
+        <img loading="lazy" src="./three-bit-adder/IMG_4514.jpg" alt="full adder" />
         <video src="./three-bit-adder/1-mute.mp4" autoplay controls muted loop class="rotate-1"></video>
-        <img src="./three-bit-adder/IMG_5026.jpg" alt="full adder" />
+        <img loading="lazy" src="./three-bit-adder/IMG_5026.jpg" alt="full adder" />
 
         <div class="two-column">
-            <img src="./three-bit-adder/IMG_4468.jpg" alt="full adder" />
-            <img src="./three-bit-adder/IMG_4469.jpg" alt="full adder" />
+            <img loading="lazy" src="./three-bit-adder/IMG_4468.jpg" alt="full adder" />
+            <img loading="lazy" src="./three-bit-adder/IMG_4469.jpg" alt="full adder" />
         </div>
 
         <video src="./three-bit-adder/2-mute.mp4" autoplay controls muted loop></video>
@@ -226,7 +226,7 @@
                     href="https://cwandt.com/pages/about" target="_blank">CW&T's</a> hardware class, Fall 2019
             </p>
         </div>
-        <img src="./wires/IMG_4055.jpg" alt="hello world" />
+        <img loading="lazy" src="./wires/IMG_4055.jpg" alt="hello world" />
         <video src="./wires/3-mute.mp4" autoplay controls muted loop></video>
 
         <div class="description">
