--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
             }
 
             li:first-child {
-                left: 4rem;
+                left: 20%;
                 top: 6%;
             }
 
             li:nth-child(2) {
                 left: auto;
-                right: 2rem
+                right: 10%;
             }
 
             li:nth-child(3) {
                 left: auto;
-                right: 3rem;
+                right: 15%;
             }
 
             li:nth-child(4) {
@@ -95,8 +95,7 @@
             }
 
             li a img {
-                width: 4rem;
-                margin: 0.25rem 0 0 auto;
+                display: none;
             }
         }
     </style>
