--- a/beaded-textiles.html
+++ b/beaded-textiles.html
@@ -59,9 +59,7 @@
         <img loading="lazy" src="./sun-bag/IMG_1599.jpeg" alt="top down view of a bead loom" />
         <div class="description">
             <p>
-                I've also been cataloging decorative tile around my neighborhood in Seattle for a future project, maybe. These patterns change every few blocks, and I haven't found an explanation as to
-                who decided the pattern or why they change.
-            </p>
+                I started cataloging decorative tile around my neighborhood in Seattle for a future project, maybe. These patterns change every few blocks, and I've since found the <a href="https://static.wixstatic.com/media/f4ac73_ac7403e482494da9b110b83fcae3a368~mv2.jpg/v1/fill/w_1480,h_908,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/f4ac73_ac7403e482494da9b110b83fcae3a368~mv2.jpg" target="_blank">original engineering record</a> and a bit more information via the <a href="https://www.capitolhillpast.org/single-post/a-little-color-goes-a-long-way-the-tile-work-on-broadway" target="_blank">Capitol Hill Histroical Society blog</a>.
         </div>
         <div class="grid">
             <img loading="lazy" src="./tiles/IMG_1964.jpg" />
