--- a/three-bit-adder.html
+++ b/three-bit-adder.html
@@ -210,8 +210,11 @@
                     class="mono">110<sub>2</sub></span> (binary).
             </p>
         </div>
+        <div class="two-column">
+            <img loading="lazy" src="./three-bit-adder/IMG_4469.jpg" alt="in progress wiring of full adder" />
+            <img loading="lazy" src="./three-bit-adder/IMG_4521.jpg" alt="in progress wiring of full adder" />
+        </div>
         <img loading="lazy" src="./three-bit-adder/IMG_4514.jpg" alt="full adder" />
-        <img style="margin: 3rem auto" loading="lazy" src="./three-bit-adder/IMG_4469.jpg" alt="full adder" />
         <video src="./three-bit-adder/1-mute.mp4" autoplay controls muted loop class="rotate-1"></video>
         <img loading="lazy" src="./three-bit-adder/IMG_5026.jpg" alt="full adder" />
         <video src="./three-bit-adder/2-mute.mp4" autoplay controls muted loop></video>
