--- a/shadow-weaving.html
+++ b/shadow-weaving.html
@@ -35,8 +35,8 @@
         <div class="description">
             <p>
                 Each warp and weft thread can be toggled on or off to determine its color, and each intersection of
-                threads can be toggled to change which thread is on top. Intersections of threads of different colors can be either color
-                depending on this structure.
+                threads can be toggled to change which thread is on top. Intersections of threads of different colors can therefore appear as either color
+                depending on its structure.
             </p>
         </div>
         <video style="width: 10rem" src="./shadow-weaving/100.mp4" loop muted controls autoplay></video>
