update text, resize photos

--- a/album-of-weaving-patterns.html
+++ b/album-of-weaving-patterns.html
@@ -59,7 +59,7 @@
         <div class="description">
             <p>
                 I encoded these patterns as arrays of binary corresponding to the threading, tie-up, and treadling(s) of
-                each pattern and compiled a dictionary of weaving specific terms. In creating this website, I learned how to read weaving drafts and rendered these arrays to generated previews of the fabrics.
+                each draft and compiled a dictionary of weaving specific terms. In creating this website, I learned how to read weaving drafts and rendered these arrays to generated previews of the fabrics.
             </p>
         </div>
         <div class="two-column">
@@ -70,7 +70,7 @@
         <div class="description">
             <p>
                 I also created an <a href="https://shelby.cool/v1/patterns/builder.html" target="_blank">editable
-                    interface</a>, which allows new patterns to be created or existing ones to be modified. 
+                    interface</a>, which allows new drafts to be created or existing ones to be modified. 
             </p>
         </div>
         <div style="overflow: hidden;">
