add fabric swatch

--- a/album-of-weaving-patterns.html
+++ b/album-of-weaving-patterns.html
@@ -37,12 +37,16 @@
     <main>
         <h2>Translation and Encoding</h2>
         <div style="overflow: hidden;">
-            <img style="margin-bottom: -0.25rem; " src="./digital-weaving/animation.gif" alt="animation of how to read weaving draft" />
+            <img style="margin-bottom: -0.25rem; " src="./digital-weaving/animation.gif"
+                alt="animation of how to read weaving draft" />
         </div>
         <div class="description">
             <p>
                 <a href="https://shelby.cool/v1/patterns.html" target="_blank">Album of Weaving Patterns</a> is a
-                web tool that is a translation and encoding of a <a href="https://shelby.cool/v1/dist/files/weaving_patterns.pdf" target="_blank">Russian weaving manual</a> for multi-shaft looms that was published in 1912. It is a practice in archiving, as well as reinterpretion.
+                web tool that is a translation and encoding of a <a
+                    href="https://shelby.cool/v1/dist/files/weaving_patterns.pdf" target="_blank">Russian weaving
+                    manual</a> for multi-shaft looms that was published in 1912. It is a practice in archiving, as well
+                as reinterpretion.
             </p>
             <p>
                 This project begain in 2013 with an email from my mom, after a PDF copy of the manual was sent to her.
@@ -59,22 +63,34 @@
         <div class="description">
             <p>
                 I encoded these patterns as arrays of binary corresponding to the threading, tie-up, and treadling(s) of
-                each draft and compiled a dictionary of weaving specific terms. In creating this website, I learned how to read weaving drafts and rendered these arrays to generated previews of the fabrics.
+                each draft and compiled a dictionary of weaving specific terms. In creating this website, I learned how
+                to read weaving drafts and rendered these arrays to generated previews of the fabrics.
             </p>
         </div>
         <div class="two-column">
             <img loading="lazy" src="./digital-weaving/encoding.png" alt="JSON with array of binary" />
-            <img loading="lazy" src="./digital-weaving/dictionary.png" alt="Russian to English translations of weaving terms" />
+            <img loading="lazy" src="./digital-weaving/dictionary.png"
+                alt="Russian to English translations of weaving terms" />
         </div>
         <img loading="lazy" src="./digital-weaving/2.png" alt="screenshot of pattern #33" />
         <div class="description">
             <p>
+                Pattern 82, woven by my mom:
+            </p>
+        </div>
+        <div class="two-column">
+            <img loading="lazy" src="./digital-weaving/pattern-82.JPG" alt="fabric woven with pattern 82" />
+            <img loading="lazy" src="./digital-weaving/draft-82.png" alt="screenshot of draft #82" />
+        </div>
+        <div class="description">
+            <p>
                 I also created an <a href="https://shelby.cool/v1/patterns/builder.html" target="_blank">editable
-                    interface</a>, which allows new drafts to be created or existing ones to be modified. 
+                    interface</a>, which allows new drafts to be created or existing ones to be modified.
             </p>
         </div>
         <div style="overflow: hidden;">
-            <img loading="lazy"style="margin-top: -2rem;" src="./digital-weaving/1.gif" alt="demonstration of weaving web app" />
+            <img loading="lazy" style="margin-top: -2rem;" src="./digital-weaving/1.gif"
+                alt="demonstration of weaving web app" />
         </div>
     </main>
     <footer>
